// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Popover base demo works fine 1`] = `
<base>
  <wx-view
    class="row"
  >
    <wx-view
      class="demo-block__header-desc"
    >
      带箭头的弹出气泡
    </wx-view>
    <t-popover
      closeOnClickOutside="{{false}}"
      data-target="normal"
      placement="top"
      theme="dark"
      visible="{{false}}"
      bind:visible-change="onVisibleChange"
    >
      <wx-view
        slot="content"
      >
        弹出气泡内容
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-button
          data-target="normal"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        带箭头
      
        </t-button>
      </wx-view>
    </t-popover>
    <wx-view
      class="demo-block__header-desc"
      style="margin-top: 32rpx"
    >
      不带箭头的弹出气泡
    </wx-view>
    <t-popover
      content="弹出气泡内容"
      data-target="noArrow"
      placement="top"
      showArrow="{{false}}"
      theme="dark"
      visible="{{false}}"
    >
      <wx-view
        class="popover-example__content"
      >
        <t-button
          data-target="noArrow"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        不带箭头
      
        </t-button>
      </wx-view>
    </t-popover>
    <wx-view
      class="demo-block__header-desc"
      style="margin-top: 32rpx"
    >
      自定义内容弹出气泡
    </wx-view>
    <t-popover
      data-target="custom"
      placement="top"
      theme="dark"
      visible="{{false}}"
    >
      <wx-view
        slot="content"
      >
        <wx-view
          class="custom__list"
        >
          <wx-view
            class="custom__item"
          >
            选项1
          </wx-view>
          <wx-view
            class="custom__item"
          >
            选项2
          </wx-view>
          <wx-view
            class="custom__item"
          >
            选项3
          </wx-view>
        </wx-view>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-button
          data-target="custom"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          自定义内容
        </t-button>
      </wx-view>
    </t-popover>
  </wx-view>
</base>
`;

exports[`Popover Popover placement demo works fine 1`] = `
<placement>
  <wx-view
    class="popover-example-row"
  >
    <wx-view
      class="demo-block__header-desc"
    >
      顶部弹出气泡
    </wx-view>
    <wx-view
      class="row"
    >
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="topLeft"
          placement="top-left"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="topLeft"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            顶部左
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="top"
          placement="top"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="top"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            顶部中
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="topRight"
          placement="top-right"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="topRight"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            顶部右
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
    </wx-view>
  </wx-view>
  <wx-view
    class="popover-example-row"
  >
    <wx-view
      class="demo-block__header-desc"
    >
      底部弹出气泡
    </wx-view>
    <wx-view
      class="row"
    >
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="bottomLeft"
          placement="bottom-left"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="bottomLeft"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            底部左
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="bottom"
          placement="bottom"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="bottom"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            底部中
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="bottomRight"
          placement="bottom-right"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            弹出气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-width--small"
              data-target="bottomRight"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            底部右
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
    </wx-view>
  </wx-view>
  <wx-view
    class="popover-example-row"
  >
    <wx-view
      class="demo-block__header-desc"
    >
      右侧弹出气泡
    </wx-view>
    <wx-view
      class="column"
    >
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="rightTop"
          placement="right-top"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="rightTop"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            右侧上
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="right"
          placement="right"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="right"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            右侧中
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="rightBottom"
          placement="right-bottom"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="rightBottom"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            右侧下
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
    </wx-view>
  </wx-view>
  <wx-view
    class="flex-end popover-example-row"
  >
    <wx-view
      class="demo-block__header-desc"
    >
      左侧弹出气泡
    </wx-view>
    <wx-view
      class="column"
    >
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="leftTop"
          placement="left-top"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="leftTop"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            左侧上
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="left"
          placement="left"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="left"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            左侧中
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
      <wx-view
        class="popover-example__content"
      >
        <t-popover
          data-target="leftBottom"
          placement="left-bottom"
          theme="dark"
          visible="{{false}}"
          bind:visible-change="onVisibleChange"
        >
          <wx-view
            slot="content"
          >
            气泡内容
          </wx-view>
          <wx-view
            class="popover-example__content"
          >
            <t-button
              class="button-with--large"
              data-target="leftBottom"
              size="large"
              theme="primary"
              variant="outline"
              bind:tap="showPopover"
            >
              
            左侧下
          
            </t-button>
          </wx-view>
        </t-popover>
      </wx-view>
    </wx-view>
  </wx-view>
</placement>
`;

exports[`Popover Popover theme demo works fine 1`] = `
<theme>
  <wx-view
    class="row"
  >
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="dark"
        placement="top"
        theme="dark"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="dark"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        深色
      
        </t-button>
      </t-popover>
    </wx-view>
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="light"
        placement="top"
        theme="light"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="light"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        浅色
      
        </t-button>
      </t-popover>
    </wx-view>
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="brand"
        placement="top"
        theme="brand"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="brand"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        品牌色
      
        </t-button>
      </t-popover>
    </wx-view>
  </wx-view>
  <wx-view
    class="row"
    style="margin-top: 32rpx"
  >
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="success"
        placement="top"
        theme="success"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="success"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        成功色
      
        </t-button>
      </t-popover>
    </wx-view>
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="warning"
        placement="top"
        theme="warning"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="warning"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        警告色
      
        </t-button>
      </t-popover>
    </wx-view>
    <wx-view
      class="popover-example__content"
    >
      <t-popover
        content="弹出气泡内容"
        data-target="error"
        placement="top"
        theme="error"
        visible="{{false}}"
        bind:visible-change="onVisibleChange"
      >
        <t-button
          class="button-width--small"
          data-target="error"
          size="large"
          theme="primary"
          variant="outline"
          bind:tap="showPopover"
        >
          
        错误色
      
        </t-button>
      </t-popover>
    </wx-view>
  </wx-view>
</theme>
`;
